asm/bookinfo/bookinfo-gw-asm.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway-asm
  namespace: bookinfo
spec:
  selector:
    asm: ingressgateway # uses the asm igw
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
